@@ -1,6 +1,6 @@
 modverdir = $(libdir)/$(mymodverdir)
 
-AUTOMAKE_OPTIONS = foreign
+AUTOMAKE_OPTIONS = foreign subdir-objects
 
 SUBDIRS = src
 
