@@ -467,6 +467,7 @@ kpcest_err_handler: Max errors exceeded..Closing connection
     - ensure all strings written to the DB are converted to the target character encoding before writing
     - copy all values when binding by value in case they are bound to an IN OUT variable, in which case memory corruption would occur previously
     - support for IN OUT variables by giving a hash argument with the "value" key as the input value for the output variable
+    - placeholders and quotes in SQL comments are ignored
 
     @subsection oracle31 oracle Driver Version 3.1
     
