@@ -10,6 +10,7 @@ version 3.2
   change
 * support for IN OUT variables by giving a hash argument with the "value" key
   as the input value for the output variable
+* ignore placeholders and quotes in SQL comments
 
 
 ***********
